// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for atRule 1`] = `
"@media screen and (min-width: 480px) {
  body {
    background-color: lightgreen;
  }
  a {
    /* postcss-ignore-line */
  }
}
"
`;

exports[`should match the snapshot for basic 1`] = `
"#main,
ul li {
  /* postcss-ignore-line */
  margin: auto;
}
"
`;

exports[`should match the snapshot for wrongComment 1`] = `
"#main,
ul li {
  /* postcss-ignore-line-wrong-comment */
  border: 1px solid black;
  margin: auto;
}
"
`;
